--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "dayjs": "^1.11.9",
-    "next": "13.4.18",
+    "eslint-config-next": "^14.0.1",
+    "mongoose": "^8.0.0",
+    "next": "^14.0.1",
     "next-auth": "^4.23.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
+    "redux-persist": "^6.0.0",
     "typescript": "5.1.6"
   },
   "devDependencies": {
